Add corner radius for image view. Clean up.

--- a/AstronomyObjC/AstronomyObjC/Storyboards/Base.lproj/Main.storyboard
+++ b/AstronomyObjC/AstronomyObjC/Storyboards/Base.lproj/Main.storyboard
@@ -16,13 +16,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ScN-02-aVX">
-                                <rect key="frame" x="0.0" y="88" width="414" height="356"/>
+                                <rect key="frame" x="57" y="104" width="300" height="300"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="356" id="cgx-Wv-Npf"/>
+                                    <constraint firstAttribute="width" constant="300" id="BwK-Wg-3E1"/>
+                                    <constraint firstAttribute="height" constant="300" id="YbP-VU-5iL"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="vu4-iv-0X4">
-                                <rect key="frame" x="16" y="456" width="382" height="115"/>
+                                <rect key="frame" x="16" y="420" width="382" height="115"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="keS-Vr-DNd">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
@@ -51,15 +52,14 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="vu4-iv-0X4" firstAttribute="top" secondItem="ScN-02-aVX" secondAttribute="bottom" constant="12" id="6dr-XF-CoM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vu4-iv-0X4" secondAttribute="trailing" constant="16" id="8Sa-A2-7gd"/>
                             <constraint firstItem="JIS-Mq-3Vr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Nc3-tm-eQA"/>
-                            <constraint firstItem="ScN-02-aVX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="RZN-3L-kEn"/>
+                            <constraint firstItem="ScN-02-aVX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ULv-JZ-fAV"/>
+                            <constraint firstItem="ScN-02-aVX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Uz7-x7-L5y"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JIS-Mq-3Vr" secondAttribute="trailing" constant="16" id="XH8-8M-RfC"/>
+                            <constraint firstItem="vu4-iv-0X4" firstAttribute="top" secondItem="ScN-02-aVX" secondAttribute="bottom" constant="16" id="aKF-24-3WX"/>
                             <constraint firstItem="vu4-iv-0X4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="eb2-Ij-CUh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JIS-Mq-3Vr" secondAttribute="bottom" constant="16" id="l8p-lU-Cs5"/>
-                            <constraint firstItem="ScN-02-aVX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sFl-0Y-Rop"/>
-                            <constraint firstItem="ScN-02-aVX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vxh-aC-Is8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
